kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dians
  labels:
    name: dians
