kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: dians
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: jagurinoski/dasproject-backend:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: dians
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080        # port used inside the cluster
      targetPort: 8080  # port exposed by the container
  type: ClusterIP       # change to NodePort if you want direct access from host
