kubernetes/postgresDB.yml
# Postgres Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: dians
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data   # PVC mounted here
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - dians
                - -d
                - mse_stock_data
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 5
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-mse-pvc
---
# Postgres Service (ClusterIP)
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: dians
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
